website/src/pages/styles.module.css
a {
  text-decoration: none;
  color: #000;
}

.section {
  padding: 72px 0;
}

.sectionTitle {
  text-align: center;
}

.sectionAlt {
  background-color: var(--ifm-color-emphasis-100);
}

.sectionInner {
  margin: 0 auto;
}

.hero {
  background-color: #2b3137;
  padding: 48px;
}

.heroInner {
  margin: 0 auto;
  max-width: 1100px;
  padding: 0 20px;
}

.heroProjectTagline {
  color: #fff;
  font-size: 60px;
  margin: 0;
}

.heroTitleTextHtml b {
  background: linear-gradient(45deg, #399cff, #00c775 80%);
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.heroLogo {
  animation-duration: 2s;
  animation-name: jack-in-the-box;
  float: right;
  margin-top: 20px;
  padding: 0 20px 20px;
  height: auto;
}

.companies {
  display: flex;
  padding-top: 2rem;
  padding-bottom: 5rem;
  width: 100%;
}

.companySvg {
  height: 100px;
  width: 150px;
}

.features {
  background-image: url(../../static/img/elipse.svg);
  background-position: 0 0;
  background-repeat: no-repeat;
  display: flex;
  align-items: center;
  padding: 2rem 0;
  width: 100%;
}

.featureSvg {
  height: 200px;
  width: 200px;
}

.serviceLogo {
  display: block;
  width: auto;
  height: auto;
  max-width: 70px;
  max-height: 55px;
}

.indexCtas {
  --ifm-button-size-multiplier: 1.6;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin-top: 24px;
}

.indexCtas a,
.indexCtas a:hover {
  color: black;
}

.indexCtas a:last-of-type {
  margin: 20px 36px;
}

.indexCtasGitHubButtonWrapper {
  display: flex;
}

.indexCtasGitHubButton {
  overflow: hidden;
}

.indexCtaTryNowButton:hover {
  color: var(--ifm-color-primary);
}

@media only screen and (max-width: 768px) {
  .hero {
    padding-left: 20px;
    padding-right: 20px;
  }

  .heroInner {
    padding: 0;
  }

  .heroProjectTagline {
    font-size: 36px;
    text-align: center;
  }

  .heroLogo {
    display: block;
    float: none;
    margin: 0 auto;
  }

  .indexCtas {
    justify-content: center;
  }

  .indexCtas a {
    margin: 20px 36px;
  }

  .indexCtasGitHubButton {
    display: none;
  }
}

